# Ace

./: .gitignore  Ace.bsdesign  README.md  dbmodel.json  main.py  pyproject.toml  requirements.txt
static/css/: styles.css
static/js/: sw.js
templates/: add.html  edit.html  index.html  login.html  signup.html
